try to solve the fixed navbar + #hash links anchored behind it, but doesn't work. Doesn't hurt, though.

--- a/oneflow/core/static/sass/_home.scss
+++ b/oneflow/core/static/sass/_home.scss
@@ -44,9 +44,10 @@
 
 /* ------------------------------------------------------------- Home / index */
 
-#home, #read, #profile {
+section {
     /* Space for the fixed navbar. */
-    padding-top: 40px;
+    /*padding-top: 60px;*/
+    margin-top: 40px;
 }
 
 #home-styles-chooser {
